--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 # Google App Engine generated folder
 appengine-generated/
+/.vscode
+node_modules
+/coverage
+/.nyc_output
+firebase-debug.log
+npm-debug.log
+package-lock.json
+yarn.lock
+.npmrc
+
+.DS_Store
+.idea
+*.iml
